--- a/client/library-mgt/src/App.css
+++ b/client/library-mgt/src/App.css
@@ -1,32 +1,4 @@
-input[type=text]{
-  width:30%;
-  border:2px solid #aaa;
-  border-radius:4px;
-  margin:8px 0;
-  outline:none;
-  padding:8px;
-  box-sizing:border-box;
-  transition:.3s;
-}
-
-input[type=text]:focus{
-  border-color:dodgerBlue;
-  box-shadow:0 0 8px 0 dodgerBlue;
-}
-input[type=textarea]{
-  width:30%;
-  border:2px solid #aaa;
-  border-radius:4px;
-  margin:8px 0;
-  outline:none;
-  padding:8px;
-  box-sizing:border-box;
-  transition:.3s;
-}
-input[type=textarea]:focus{
-  border-color:dodgerBlue;
-  box-shadow:0 0 8px 0 dodgerBlue;
-}
+/* s */
 label { color: #B4886B; font-weight: bold; display: block; width: 150px; float: left; } label:after { content: ": " }
 
 
