--- a/client/library-mgt/src/App.css
+++ b/client/library-mgt/src/App.css
@@ -2,29 +2,8 @@
 label { color: #B4886B; font-weight: bold; display: block; width: 150px; float: left; } label:after { content: ": " }
 
 
-.myButton {
-  box-shadow:inset 0px 1px 0px 0px #fbafe3;
-  background:linear-gradient(to bottom, #ff5bb0 5%, #ef027d 100%);
-  background-color:#ff5bb0;
-  border-radius:6px;
-  border:1px solid #ee1eb5;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:15px;
-  font-weight:bold;
-  padding:6px 24px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #c70067;
-}
-.myButton:hover {
-  background:linear-gradient(to bottom, #ef027d 5%, #ff5bb0 100%);
-  background-color:#ef027d;
-}
-.myButton:active {
-  position:relative;
-  top:1px;
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
 .styled-select {
   /* background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0; */
@@ -45,28 +24,6 @@ display: block;
 color: #000;
 padding: 8px 16px;
 text-decoration: none;
-}
-li Link.active {
-background-color: #4CAF50;
-color: white;
-}
-li {
-text-align: center;
-border-bottom: 1px solid #555;
-}
-li:last-child {
-border-bottom: none;
-}
-li Link {
-display: block;
-color: #000;
-padding: 8px 16px;
-text-decoration: none;
-}
-
-li Link:hover:not(.active) {
-background-color: #555;
-color: white;
 }
 
 
